[tool.poetry]
name = "integration-tests"
version = "0.1.0"
description = ""
authors = ["Rémy Greinhofer <remy.greinhofer@gmail.com>"]
readme = "README.md"
packages = [{ include = "integration_tests" }]

[tool.poetry.dependencies]
python = "^3.10"
pytest-testinfra = "^6.8.0"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
bpython = "^0.23"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-p no:warnings -x"
markers = ["chains: Tekton Chains tests"]
